# openclaw-trade-agent

./: .gitignore  AGENTS.md  IDENTITY.md  MEMORY.md  PROJECT_OVERVIEW.md  README.md  SOUL.md  TOOLS.md  USER.md  fetch_papers.py  pyproject.toml
.openclaw/: workspace-state.json
docs/: qlib_rd_agent_integration_design.md
reports/: _data.json  market_data.json  morning-brief-2026-02-10-1245HKT.md  morning-brief-2026-02-11.md  morning-brief-2026-02-12.md  morning-brief-2026-02-13.md  morning-brief-2026-02-14.md  morning-brief-2026-02-15.md  morning-brief-2026-02-16.md  morning-brief-2026-02-17.md  morning-brief-2026-02-18.md  morning-brief-2026-02-19.md  morning-brief-2026-02-20.md  morning-brief-2026-02-21.md  morning-brief-2026-02-22.md  morning-brief-2026-02-23.md  morning-brief-2026-02-24.md  morning-brief-2026-02-25.md  morning-brief-2026-02-26.md  morning-brief-2026-02-27.md  morning-brief-2026-02-28.md  morning-brief-2026-03-02.md  morning-brief-2026-03-03.md  morning-brief-2026-03-05.md  morning-brief-2026-03-06.md  morning-brief-2026-03-07.md  morning-brief-2026-03-08.md  morning-brief-2026-03-09.md  morning-brief-2026-03-10.md  morning-brief-2026-03-12.md  morning-brief-2026-03-14.md  morning-brief-2026-03-15.md  morning-brief-2026-03-16.md  morning-brief-2026-03-17.md  morning-brief-2026-03-18.md  morning-brief-2026-03-19.md  morning-brief-2026-03-21.md  morning-brief-2026-03-22.md  morning-brief-2026-03-24.md
schemas/: factor_hypotheses_schema.md
scripts/: sync_hypotheses_to_dropbox.py
skills/agentic-paper-digest/: SKILL.md
skills/finnhub/: SKILL.md
(+2 files in other folders)
