[project]
name = "trade-agent-scripts"
version = "0.1.0"
description = "Trade Agent utility scripts (factor hypothesis sync, etc.)"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "dropbox>=12.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
